--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,8 +8,8 @@ layout: default
 	<div class="container">
 		<div class="text-hero">
 			<h1>Produsen souvenir and merchandise.</h1>
-			<a href="{{ "/shop/" | relative_url }}" class="btn btn-white-outline">shop the product &rsaquo;</a>
-			<a href="http://api.whatsapp.com/send?phone=6285361005250&text=Mau pesan Bahan Baku PINnya gan..." class="btn btn-white-outline"><i class="icon-whatsapp"></i> Order Now</a>
+			<a href="http://whatsapp.adiradjapin.com" class="btn btn-icon"><i class="icon-whatsapp"></i> Order Now</a>
+			<a href="{{ "/shop/" | relative_url }}" class="btn btn-bg-red">shop the product &rsaquo;</a>
 		</div>
 	</div>
 
