--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,12 @@
 		<p class="footer-menu left">
 			<a href="{{ "/" | relative_url }}">Home</a>
 			<span class="slash">/</span>
-			<a href="{{ "/shop/" | relative_url }}">Shop</a>
+			<a href="{{ "shop/" | relative_url }}">Shop</a>
 		</p>
 		<p class="footer-menu right">
-			<a href="{{ "/about/" | relative_url }}">About Us</a>
+			<a href="{{ "about/" | relative_url }}">About Us</a>
 			<span class="slash">/</span>
-			<a href="{{ "/contact/" | relative_url }}">Contact Us</a>
+			<a href="{{ "contact/" | relative_url }}">Contact Us</a>
 		</p>
 		<div class="footer-love">
 			<svg class="icon-bandung">
