update url lagi

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16" />
 
-        <link rel="stylesheet" href="{{ "assets/css/main.css" | relative_url }}">
+        <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -24,10 +24,10 @@
 
         {{ content }}
 
-        <script src="{{ "assets/js/vendor/modernizr-3.5.0.min.js" | relative_url }}"></script>
-        <script src="{{ "assets/js/vendor/jquery-3.2.1.min.js" | relative_url }}"></script>
-        <script src="{{ "assets/js/instafeed.min.js" | relative_url }}"></script>
-        <script src="{{ "assets/js/main.js" | relative_url }}"></script>
+        <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="assets/js/instafeed.min.js"></script>
+        <script src="assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!-- <script>
