--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
 <footer>
 	<div class="container">
 		<p class="footer-menu left">
-			<a href="{{ "/" | relative_url }}">Home</a>
+			<a href="/">Home</a>
 			<span class="slash">/</span>
-			<a href="{{ "shop/" | relative_url }}">Shop</a>
+			<a href="shop/">Shop</a>
 		</p>
 		<p class="footer-menu right">
-			<a href="{{ "about/" | relative_url }}">About Us</a>
+			<a href="about/">About Us</a>
 			<span class="slash">/</span>
-			<a href="{{ "contact/" | relative_url }}">Contact Us</a>
+			<a href="contact/">Contact Us</a>
 		</p>
 		<div class="footer-love">
 			<svg class="icon-bandung">
