--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 header">
-				<a href="{{ "/" | relative_url }}">
+				<a href="/">
 					<svg class="icon-logo">
 						{% include icons/logo_adiradjapin.svg %}
 					</svg>
@@ -10,7 +10,7 @@
 				<span>{{ site.tagline }}</span>
 				<nav>
 					<ul>
-						<li class="shop"><a href="{{ "shop/" | relative_url }}" title="shop adiradjapin">shop</a></li>
+						<li class="shop"><a href="shop/" title="shop adiradjapin">shop</a></li>
 						<li><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" title="twitter adiradjapin"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://instagram.com/{{ site.instagram_username }}" target="_blank" title="instagram adiradjapin"><i class="icon-instagram"></i></a></li>
 					</ul>
