--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
 		<div class="text-hero">
 			<h1>Produsen souvenir and merchandise.</h1>
 			<a href="http://whatsapp.adiradjapin.com" class="btn btn-icon"><i class="icon-whatsapp"></i> Order Now</a>
-			<a href="{{ "shop/" | relative_url }}" class="btn btn-bg-red">shop the product &rsaquo;</a>
+			<a href="shop/" class="btn btn-bg-red">shop the product &rsaquo;</a>
 		</div>
 	</div>
 
@@ -21,13 +21,13 @@ layout: default
 		<div class="section-title">
 			<h3>Products</h3>
 			<span class="devider"></span>
-			<a href="{{ "shop/" | relative_url }}" class="caps">see all &rsaquo;</a>
+			<a href="shop/" class="caps">see all &rsaquo;</a>
 		</div>
 		<div class="row">			
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -38,7 +38,7 @@ layout: default
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -49,7 +49,7 @@ layout: default
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -60,7 +60,7 @@ layout: default
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -73,7 +73,7 @@ layout: default
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -84,7 +84,7 @@ layout: default
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -95,7 +95,7 @@ layout: default
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -106,7 +106,7 @@ layout: default
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -116,7 +116,7 @@ layout: default
 			</div>
 		</div>
 		<div class="cta">
-			<a href="{{ "shop/" | relative_url }}" class="btn btn-large btn-secondary">shop the product &rsaquo;</a>
+			<a href="shop/" class="btn btn-large btn-secondary">shop the product &rsaquo;</a>
 		</div>
 	</div>
 
@@ -129,7 +129,7 @@ layout: default
 			<div class="text-pad">
 				<h1 class="no-m">About AdiRadjaPin</h1>
 				<p>Kami adalah produsen souvenir dan merchandise, kami menawarkan harga yang terjangkau dengan kualitas terbaik.</p>
-				<a href="{{ "/about/" | relative_url }}" class="btn btn-white-outline">Read Our Story &rsaquo;</a>
+				<a href="about/" class="btn btn-white-outline">Read Our Story &rsaquo;</a>
 			</div>
 		</div>
 	</div>
@@ -145,7 +145,7 @@ layout: default
 		<ul id="instafeed" class="clearfix unstyled">
 			<li class="default">
 				<a href="https://www.instagram.com/adiradjapin/" target="_blank" title="Follow adiradjapin">
-					<img src="{{ "assets/img/insta-promo.jpg" | relative_url }}" alt="">
+					<img src="assets/img/insta-promo.jpg" alt="">
 				</a>
 			</li>
 		</ul>
