--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
 		<div class="text-hero">
 			<h1>Produsen souvenir and merchandise.</h1>
 			<a href="http://whatsapp.adiradjapin.com" class="btn btn-icon"><i class="icon-whatsapp"></i> Order Now</a>
-			<a href="shop/" class="btn btn-bg-red">shop the product &rsaquo;</a>
+			<a href="/shop/" class="btn btn-bg-red">shop the product &rsaquo;</a>
 		</div>
 	</div>
 
@@ -21,7 +21,7 @@ layout: default
 		<div class="section-title">
 			<h3>Products</h3>
 			<span class="devider"></span>
-			<a href="shop/" class="caps">see all &rsaquo;</a>
+			<a href="/shop/" class="caps">see all &rsaquo;</a>
 		</div>
 		<div class="row">			
 			<div class="col-lg-3 col-sm-6">
@@ -116,7 +116,7 @@ layout: default
 			</div>
 		</div>
 		<div class="cta">
-			<a href="shop/" class="btn btn-large btn-secondary">shop the product &rsaquo;</a>
+			<a href="/shop/" class="btn btn-large btn-secondary">shop the product &rsaquo;</a>
 		</div>
 	</div>
 
@@ -129,7 +129,7 @@ layout: default
 			<div class="text-pad">
 				<h1 class="no-m">About AdiRadjaPin</h1>
 				<p>Kami adalah produsen souvenir dan merchandise, kami menawarkan harga yang terjangkau dengan kualitas terbaik.</p>
-				<a href="about/" class="btn btn-white-outline">Read Our Story &rsaquo;</a>
+				<a href="/about/" class="btn btn-white-outline">Read Our Story &rsaquo;</a>
 			</div>
 		</div>
 	</div>
