update image product

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,27 +23,27 @@ layout: default
 			<span class="devider"></span>
 			<a href="{{ "/shop/" | relative_url }}" class="caps">see all &rsaquo;</a>
 		</div>
-		<div class="row">			
+		<div class="row">											
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
-						<span class="cat">Ganci</span>
+						<img src="{{ "/assets/img/pin_ganci/PIN_palastik_25.jpg" | relative_url }}" alt="">
+						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
-					<div class="name">Plastik 44 Putih PP</div>
-					<small class="mb-10">Rp. 130,-</small>
+					<div class="name">Plastik 25</div>
+					<small class="mb-10">Rp. 50,-</small>
 				</a>
 			</div>
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
-						<span class="cat">Ganci</span>
+						<img src="{{ "/assets/img/pin_ganci/PIN_palastik_32.jpg" | relative_url }}" alt="">
+						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
-					<div class="name">Plastik 44 Putih HI</div>
-					<small class="mb-10">Rp. 150,-</small>
+					<div class="name">Plastik 32</div>
+					<small class="mb-10">Rp. 65,-</small>
 				</a>
 			</div>
 			<div class="col-lg-3 col-sm-6">
